Fixed footer overlapping the left menu

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -1,6 +1,3 @@
----
----
-
 @import "{{ site.theme }}";
 
 .side-bar {
@@ -61,6 +58,12 @@ img {
   .inner {
     width: 69%;
     padding: 50px 10px 30px 10px;
+  }
+}
+
+#footer_wrap {
+  .inner {
+    width: 69%;
   }
 }
 
